# white_ticket

./: CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  package.xml  ticket_id.sh
images/: test.py
msg/: Seed.msg
scripts/: .camera.py.swp  .decode.py.swp  .display_change.py.swp  camera.py  decode.py  display_change.py  distance.py  firebase_seed.js  nonce.js  tcp_setting  tcp_setting.txt
src/: .main.cpp.swp  \  main.cpp  ultra_sonic.cpp
